--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    When Sivamani is in ❤️ with some JS
   </footer>
   <script src="./index.js"></script>
 </body>
